# ical-tcl

./: .gitignore  COPYING  Makefile.am  README.md  TODO  configure.ac  main.C  main.cpp  startup.tcl.in
tcllib/: README  class.doc
tcllib/tests/: bug.tcl  ctest.tcl  error.tcl  file.tcl  num.tcl  string.tcl  yn.tcl  ync.tcl
tests/: cfile.tcl  coption.tcl  dialog.tcl  no_x.tcl  scaffold.tcl  x.tcl
time/: Time.C
types/: hspeed.C  hspeed.cpp  testbv.C  timemap.C
